--- a/src/components/global.css
+++ b/src/components/global.css
@@ -1,11 +1,11 @@
 @tailwind utilities;
 
 body {
-  --bg: #fff;
-  --lightBg: #f5f5f5;
+  --bg: #f8f8f5;
+  --lightBg: #e9e9e3;
   --textNormal: #181818;
   --textTitle: #181818;
-  --textLink: #891c9c;
+  --textLink: #181818;
   --hr: hsla(0, 20%, 1%, 0.2);
 
   background-color: var(--bg);
