--- a/src/components/global.css
+++ b/src/components/global.css
@@ -18,7 +18,7 @@ body.dark {
   --lightBg: #0f0f0f;
   --textNormal: #e0e0e0;
   --textTitle: #fff;
-  --textLink: #8a3b98;
+  --textLink: #fff;
   --hr: hsla(0, 0%, 100%, 0.2);
 }
 
